# my_appls

GenericObjJoystickControl/: CMakeLists.txt
GenericObjJoystickControl/src/: GenericObjJoystickControl.cpp  GenericObjJoystickControl.h  joystick.h  main.cpp
ballJoystickControl/: CMakeLists.txt  ballJoystickControl.cpp  ballJoystickControl.h  main.cpp
ballJoystickControl/.kdev4/: ballJoystickControl.kdev4
ballJoystickControl/src/: ballJoystickControl.cpp  ballJoystickControl.h  joystick.h  main.cpp
buffersHelperTest_RFModule/: CMakeLists.txt
buffersHelperTest_RFModule/src/: BuffersHelper-inl.h  BuffersHelper.cpp  BuffersHelper.h  FixedSizeBuffersManager-inl.h  FixedSizeBuffersManager.h  buffHelpTest.cpp  buffHelpTest.h  main (copy).cpp  main.cpp
checkRobotInterface/: CMakeLists.txt
checkRobotInterface/src/: main.cpp
code/: CMakeLists.txt
code/src/: TestGetPidApp.cpp  TestGetPidApp.h  main.cpp
follower/: CMakeLists.txt
follower/app/conf/: follower_SIM.ini
follower/app/personFollower/: demoPersonFollower.xml
follower/app/redBall/: demoRedBall.xml
follower/src/: Ball3DPointRetriver.cpp  Ball3DPointRetriver.h  Follower.cpp  Follower.h  FollowerModule.cpp  FollowerModule.h  Person3DPointRetriver.cpp  Person3DPointRetriver.h  Person3DRetriver.cpp  Person3DRetriver.h  SimFramePainter.cpp  SimFramePainter.h  TargetRestriver.cpp  TargetRetriver.h  follower.cpp  follower.h  followerModule.cpp  main.cpp  simFramePainter.cpp  simFramePainter.h
simpleExample/: CMakeLists.txt
simpleExample/app/scripts/: application.xml
simpleExample/src/: SimpleExample.cpp  SimpleExample.h  main.cpp
testNetiCubHead/: CMakeLists.txt
testNetiCubHead/app/conf/: simpleExapleCfg.ini
testNetiCubHead/src/: main.cpp  test.cpp  test.h
yarpLoggerTester/: CMakeLists.txt
yarpLoggerTester/src/: main.cpp  tester.cpp  tester.h
